--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/typography": "^0.5.12",
     "@waline/client": "^3.1.3",
     "autoprefixer": "^10.4.17",
+    "clsx": "^2.1.1",
     "contentlayer2": "0.4.6",
     "esbuild": "0.20.2",
     "framer-motion": "^11.3.19",
@@ -40,6 +41,7 @@
     "react-h5-audio-player": "^3.9.1",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.0.1",
+    "react-icons": "^5.3.0",
     "react-spring": "^9.7.3",
     "reading-time": "1.5.0",
     "rehype-autolink-headings": "^7.1.0",
