--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-resources-to-backend": "^1.2.0",
     "image-size": "1.1.1",
+    "kbar": "0.1.0-beta.45",
     "next": "^14.2.5",
     "next-contentlayer2": "0.4.6",
     "next-themes": "^0.3.0",
