--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tailwind-nextjs-starter-blog-i18n",
-  "version": "2.2.0",
+  "name": "jenolog.com",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "next dev",
@@ -39,7 +39,6 @@
     "postcss": "^8.4.33",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-h5-audio-player": "^3.9.1",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.0.1",
     "react-icons": "^5.3.0",
