--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "remark-gfm": "^4.0.0",
     "remark-github-blockquote-alert": "^1.2.1",
     "remark-math": "^6.0.0",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.3",
     "unist-util-visit": "^5.0.0",
     "zustand": "^4.5.0"
