--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@next/bundle-analyzer": "14.2.3",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
+    "@vercel/analytics": "^1.3.2",
     "@waline/client": "^3.1.3",
     "autoprefixer": "^10.4.17",
     "clsx": "^2.1.1",
