--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
     "@vercel/analytics": "^1.3.2",
+    "@vercel/speed-insights": "^1.0.14",
     "@waline/client": "^3.1.3",
     "autoprefixer": "^10.4.17",
     "clsx": "^2.1.1",
