--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vercel/speed-insights": "^1.0.14",
     "@waline/client": "^3.1.3",
     "autoprefixer": "^10.4.17",
+    "cloudinary-build-url": "^0.2.4",
     "clsx": "^2.1.1",
     "contentlayer2": "0.4.6",
     "esbuild": "0.20.2",
@@ -44,6 +45,7 @@
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.0.1",
     "react-icons": "^5.3.0",
+    "react-image-lightbox": "^5.1.4",
     "react-spring": "^9.7.3",
     "reading-time": "1.5.0",
     "rehype-autolink-headings": "^7.1.0",
@@ -62,6 +64,7 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@cld-apis/types": "^0.1.6",
     "@svgr/webpack": "^8.1.0",
     "@types/mdx": "^2.0.12",
     "@types/node": "22.5.4",
