--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "rehype-citation": "^2.0.0",
     "rehype-katex": "^7.0.0",
     "rehype-preset-minify": "7.0.0",
+    "rehype-pretty-code": "^0.14.0",
     "rehype-prism-plus": "^2.0.0",
     "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
@@ -78,6 +79,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.0",
     "lint-staged": "^15.2.0",
+    "mdx-bundler": "^10.0.3",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "typescript": "^5.3.3"
